--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "mongoose": "^5.7.5",
     "mongoose-paginate-v2": "^1.3.2",
     "redis": "^2.8.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
